--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,8 @@
+* {
+  font-family: "Rubik", sans-serif;
+  overflow-x: hidden;
+}
+
 .index nav {
   height: 20%;
   background: -webkit-linear-gradient(to right, #2B32B2, #1488CC);
@@ -6,4 +11,18 @@
 .index nav li a {
   color: white;
   list-style: none;
+}
+.index button {
+  padding: 1% 3%;
+  border: none;
+  border-radius: 5px;
+  background-color: #1488CC;
+  color: white;
+  font-size: larger;
+  display: block;
+  margin: auto;
+  margin-top: 3%;
+}
+.index button:hover {
+  background-color: #2B32B2;
 }/*# sourceMappingURL=styles.css.map */
