--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -1,12 +1,34 @@
+* {
+    font-family: 'Rubik', sans-serif;
+    overflow-x: hidden;
+}
+
+
 .index {
     nav {
         height: 20%;
         background: -webkit-linear-gradient(to right, #2B32B2, #1488CC);
         background: linear-gradient(to right, #2B32B2, #1488CC);
+
         li a {
-            color:white;
+            color: white;
             list-style: none;
         }
-    };
-    
+    }
+
+    button {
+        padding: 1% 3%;
+        border: none;
+        border-radius: 5px;
+        background-color: #1488CC;
+        color: white;
+        font-size: larger;
+        display: block;
+        margin: auto;
+        margin-top: 3%;
+
+        &:hover {
+            background-color: #2B32B2;
+        }
+    }
 }
