--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,16 +13,48 @@
   list-style: none;
 }
 .index button {
-  padding: 1% 3%;
-  border: none;
-  border-radius: 5px;
-  background-color: #1488CC;
-  color: white;
-  font-size: larger;
   display: block;
   margin: auto;
   margin-top: 3%;
+  border: none;
+  padding: 1% 2.5%;
+  border-radius: 10rem;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: larger;
+  letter-spacing: 0.2rem;
+  transition: all 0.3s;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  cursor: pointer;
+}
+.index button:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #1488CC;
+  border-radius: 10rem;
+  z-index: -2;
+}
+.index button:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  background-color: #2B32B2;
+  transition: all 0.3s;
+  border-radius: 10rem;
+  z-index: -1;
 }
 .index button:hover {
-  background-color: #2B32B2;
+  color: #fff;
+}
+.index button:hover:before {
+  width: 100%;
 }/*# sourceMappingURL=styles.css.map */
