--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -1,8 +1,10 @@
+$color: #1488CC;
+
+
 * {
     font-family: 'Rubik', sans-serif;
     overflow-x: hidden;
 }
-
 
 .index {
     nav {
@@ -17,18 +19,51 @@
     }
 
     button {
-        padding: 1% 3%;
-        border: none;
-        border-radius: 5px;
-        background-color: #1488CC;
-        color: white;
-        font-size: larger;
         display: block;
         margin: auto;
         margin-top: 3%;
-
-        &:hover {
-            background-color: #2B32B2;
+        border: none;
+        padding: 1% 2.5%;
+        border-radius: 10rem;
+        color: #fff;
+        text-transform: uppercase;
+        font-size: larger;
+        letter-spacing: .20rem;
+        transition: all .3s;
+        position: relative;
+        overflow: hidden;
+        z-index: 1;
+        cursor: pointer;
+        &:after {
+          content: '';
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background-color: $color;
+          border-radius: 10rem;
+          z-index: -2;
         }
-    }
+        &:before {
+          content: '';
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 0%;
+          height: 100%;
+          background-color: #2B32B2;
+          transition: all .3s;
+          border-radius: 10rem;
+          z-index: -1;
+        }
+        &:hover {
+          color: #fff;
+          &:before {
+            width: 100%;
+          }
+        }
+      }
+
 }
+  
