--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -57,4 +57,18 @@
 }
 .index button:hover:before {
   width: 100%;
+}
+.index table {
+  margin-top: 1%;
+}
+.index form {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+.index input {
+  border: 1px solid #1488CC;
+  padding: 1%;
+  border-radius: 5px;
+  margin: 0 10px;
 }/*# sourceMappingURL=styles.css.map */
