Modificando interacciones para usar el DOM y no alert/consola

--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -82,5 +82,14 @@ $color: #1488CC;
         border-radius: 5px;
         margin: 0 10px;
       }
+
+      #moreInfo {
+        display: none;
+      }
+
+      #verPromedio {
+        text-align: center;
+        margin-top: 1%;
+      }
 }
   
