--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -71,4 +71,11 @@
   padding: 1%;
   border-radius: 5px;
   margin: 0 10px;
+}
+.index #moreInfo {
+  display: none;
+}
+.index #verPromedio {
+  text-align: center;
+  margin-top: 1%;
 }/*# sourceMappingURL=styles.css.map */
