--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -78,4 +78,14 @@
 .index #verPromedio {
   text-align: center;
   margin-top: 1%;
+}
+.index #modal {
+  display: none;
+  padding: 2%;
+  border: 5px solid;
+  border-image: linear-gradient(45deg, purple, orange) 1;
+  border-radius: 5px;
+  text-align: center;
+  margin: auto;
+  margin-top: 3%;
 }/*# sourceMappingURL=styles.css.map */
