--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -2,94 +2,108 @@ $color: #1488CC;
 
 
 * {
-    font-family: 'Rubik', sans-serif;
-    overflow-x: hidden;
+  font-family: 'Rubik', sans-serif;
+  overflow-x: hidden;
 }
 
 .index {
-    nav {
-        height: 20%;
-        background: -webkit-linear-gradient(to right, #2B32B2, #1488CC);
-        background: linear-gradient(to right, #2B32B2, #1488CC);
+  nav {
+    height: 20%;
+    background: -webkit-linear-gradient(to right, #2B32B2, #1488CC);
+    background: linear-gradient(to right, #2B32B2, #1488CC);
 
-        li a {
-            color: white;
-            list-style: none;
-        }
+    li a {
+      color: white;
+      list-style: none;
+    }
+  }
+
+  button {
+    display: block;
+    margin: auto;
+    margin-top: 3%;
+    border: none;
+    padding: 1% 2.5%;
+    border-radius: 10rem;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: larger;
+    letter-spacing: .20rem;
+    transition: all .3s;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    cursor: pointer;
+
+    &:after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: $color;
+      border-radius: 10rem;
+      z-index: -2;
     }
 
-    button {
-        display: block;
-        margin: auto;
-        margin-top: 3%;
-        border: none;
-        padding: 1% 2.5%;
-        border-radius: 10rem;
-        color: #fff;
-        text-transform: uppercase;
-        font-size: larger;
-        letter-spacing: .20rem;
-        transition: all .3s;
-        position: relative;
-        overflow: hidden;
-        z-index: 1;
-        cursor: pointer;
-        &:after {
-          content: '';
-          position: absolute;
-          bottom: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          background-color: $color;
-          border-radius: 10rem;
-          z-index: -2;
-        }
-        &:before {
-          content: '';
-          position: absolute;
-          bottom: 0;
-          left: 0;
-          width: 0%;
-          height: 100%;
-          background-color: #2B32B2;
-          transition: all .3s;
-          border-radius: 10rem;
-          z-index: -1;
-        }
-        &:hover {
-          color: #fff;
-          &:before {
-            width: 100%;
-          }
-        }
-      }
+    &:before {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 0%;
+      height: 100%;
+      background-color: #2B32B2;
+      transition: all .3s;
+      border-radius: 10rem;
+      z-index: -1;
+    }
 
-      table {
-        margin-top: 1%;
-      }
+    &:hover {
+      color: #fff;
 
-      form {
-        text-align: center;
-        display: flex;
-        justify-content: center;
-
+      &:before {
+        width: 100%;
       }
+    }
+  }
 
-      input {
-        border: 1px solid #1488CC;
-        padding: 1%;
-        border-radius: 5px;
-        margin: 0 10px;
-      }
+  table {
+    margin-top: 1%;
+  }
 
-      #moreInfo {
-        display: none;
-      }
+  form {
+    text-align: center;
+    display: flex;
+    justify-content: center;
 
-      #verPromedio {
-        text-align: center;
-        margin-top: 1%;
-      }
+  }
+
+  input {
+    border: 1px solid #1488CC;
+    padding: 1%;
+    border-radius: 5px;
+    margin: 0 10px;
+  }
+
+  #moreInfo {
+    display: none;
+  }
+
+  #verPromedio {
+    text-align: center;
+    margin-top: 1%;
+  }
+
+  #modal {
+    display: none;
+    padding: 2%;
+    border: 5px solid;
+    border-image: linear-gradient(45deg, purple, orange) 1;
+    border-radius: 5px;
+    text-align: center;
+    margin: auto;
+    margin-top: 3%;
+  }
 }
-  
