--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -82,10 +82,11 @@
 .index #modal {
   display: none;
   padding: 2%;
-  border: 5px solid;
-  border-image: linear-gradient(45deg, purple, orange) 1;
+  color: white;
+  background: linear-gradient(to right, #2B32B2, #1488CC);
   border-radius: 5px;
   text-align: center;
   margin: auto;
   margin-top: 3%;
+  width: fit-content;
 }/*# sourceMappingURL=styles.css.map */
