--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -99,11 +99,12 @@ $color: #1488CC;
   #modal {
     display: none;
     padding: 2%;
-    border: 5px solid;
-    border-image: linear-gradient(45deg, purple, orange) 1;
+    color: white;
+    background: linear-gradient(to right, #2B32B2, #1488CC);
     border-radius: 5px;
     text-align: center;
     margin: auto;
     margin-top: 3%;
+    width: fit-content;
   }
 }
