--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,7 +17,7 @@
   margin: auto;
   margin-top: 3%;
   border: none;
-  padding: 1% 2.5%;
+  padding: 1% 3%;
   border-radius: 10rem;
   color: #fff;
   text-transform: uppercase;
@@ -67,7 +67,7 @@
   justify-content: center;
 }
 .index input {
-  border: 1px solid #1488CC;
+  border: 2px solid #1488CC;
   padding: 1%;
   border-radius: 5px;
   margin: 0 10px;
@@ -89,4 +89,8 @@
   margin: auto;
   margin-top: 3%;
   width: fit-content;
+}
+.index h1, .index h2 {
+  text-align: center;
+  margin: 2% 12%;
 }/*# sourceMappingURL=styles.css.map */
