--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -81,7 +81,7 @@ $color: #1488CC;
   }
 
   input {
-    border: 1px solid #1488CC;
+    border: 2px solid #1488CC;
     padding: 1%;
     border-radius: 5px;
     margin: 0 10px;
@@ -106,5 +106,10 @@ $color: #1488CC;
     margin: auto;
     margin-top: 3%;
     width: fit-content;
+  }
+
+  h1, h2 {
+    text-align: center;
+    margin: 2% 12%;
   }
 }
