--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -71,6 +71,7 @@
   padding: 1%;
   border-radius: 5px;
   margin: 0 10px;
+  overflow: auto;
 }
 .index #moreInfo {
   display: none;
@@ -92,5 +93,15 @@
 }
 .index h1, .index h2 {
   text-align: center;
-  margin: 2% 12%;
+  margin: 0 12%;
+}
+.index .actividad {
+  text-align: center;
+  background-image: linear-gradient(to right top, #ff6f91, #ff7689, #ff7d81, #ff847b, #ff8c76, #ff9372, #ff9a6e, #ffa16b, #ffaa67, #ffb363, #ffbd61, #ffc75f);
+  color: white;
+  margin-top: 5%;
+}
+.index img {
+  width: 30%;
+  margin: auto;
 }/*# sourceMappingURL=styles.css.map */
