--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -7,13 +7,16 @@ $color: #1488CC;
 }
 
 nav {
-  height: 20%;
+  height: 25%;
   background: -webkit-linear-gradient(to right, #2B32B2, #1488CC);
   background: linear-gradient(to right, #2B32B2, #1488CC);
 
   li a {
     color: white;
     list-style: none;
+  }
+  a:hover {
+    color: white;
   }
 }
 
@@ -119,7 +122,10 @@ h2 {
   text-align: center;
   background-image: linear-gradient(to right top, #ff6f91, #ff7689, #ff7d81, #ff847b, #ff8c76, #ff9372, #ff9a6e, #ffa16b, #ffaa67, #ffb363, #ffbd61, #ffc75f);
   color: white;
-  margin-top: 1%;
+  
+  #bienvenido {
+    margin-top: 1%;
+  }
 }
 
 img {
