aplicando api de clima

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -124,4 +124,13 @@ img {
 
 #api {
   margin-top: 3%;
+}
+
+#btnClima {
+  display: inline;
+}
+
+.searchC {
+  display: block;
+  margin: auto;
 }/*# sourceMappingURL=styles.css.map */
