--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -142,7 +142,8 @@ img {
   display: inline;
 }
 
-.searchC {
-  display:block;
+#searchC {
+  display: block;
   margin: auto;
+  text-align: center;
 }
