--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -3,7 +3,6 @@ $color: #1488CC;
 
 * {
   font-family: 'Rubik', sans-serif;
-  overflow-x: hidden;
 }
 
 nav {
@@ -15,6 +14,7 @@ nav {
     color: white;
     list-style: none;
   }
+
   a:hover {
     color: white;
   }
@@ -122,9 +122,18 @@ h2 {
   text-align: center;
   background-image: linear-gradient(to right top, #ff6f91, #ff7689, #ff7d81, #ff847b, #ff8c76, #ff9372, #ff9a6e, #ffa16b, #ffaa67, #ffb363, #ffbd61, #ffc75f);
   color: white;
-  
-  #bienvenido {
-    margin-top: 1%;
+
+  a {
+    text-decoration: none;
+    border: 1px solid white;
+    border-radius: 10px;
+    padding: 10px;
+    color: white;
+    margin-bottom: 3%;
+    transition: .2s;
+    &:hover {
+      background-color: #ffffff23;
+    }
   }
 }
 
@@ -146,4 +155,14 @@ img {
   display: block;
   margin: auto;
   text-align: center;
+}
+
+#inputsLabels {
+  display: flex;
+  align-items: center;
+}
+
+.clima {
+  background-image: linear-gradient(to right, #e2e7ef, #b7c7f4);
+
 }
